--- a/production.html
+++ b/production.html
@@ -994,7 +994,7 @@
     <div class="minting-modal">
       <div class="minting-spinner"></div>
       <h3>Minting to Blockchain</h3>
-      <p>Creating QR codes and recording data on IPFS & XRPL...</p>
+      <p>We're permanently recording your product data on IPFS & the XRP Ledger so customers can verify authenticity forever. Creating unique QR codes for each item.</p>
       <div class="minting-status" id="mintingStatus">Initializing...</div>
       <p class="minting-warning"><i class="fas fa-exclamation-triangle"></i> Please don't refresh or close this page</p>
     </div>
