--- a/use-cases.html
+++ b/use-cases.html
@@ -535,20 +535,8 @@
       font-size: 0.875rem;
     }
 
-    /* Responsive */
+    /* Responsive - NO horizontal sidebar override */
     @media (max-width: 768px) {
-      .sidebar {
-        width: 100%;
-        height: auto;
-        position: relative;
-        padding: 1.5rem;
-      }
-
-      .sidebar-nav {
-        flex-direction: row;
-        overflow-x: auto;
-      }
-
       .main-content,
       .footer {
         margin-left: 0;
