--- a/verify.html
+++ b/verify.html
@@ -945,20 +945,8 @@
       transform: rotate(90deg);
     }
 
-    /* Responsive */
+    /* Responsive - NO horizontal sidebar (let sidebar.js handle mobile) */
     @media (max-width: 768px) {
-      .sidebar {
-        width: 100%;
-        height: auto;
-        position: relative;
-        padding: 1.5rem;
-      }
-
-      .sidebar-nav {
-        flex-direction: row;
-        overflow-x: auto;
-      }
-
       .main-content {
         margin-left: 0;
       }
