--- a/pricing-pharma.html
+++ b/pricing-pharma.html
@@ -399,18 +399,9 @@
     .contact-value a:hover {
       color: #667eea;
     }
-    /* Responsive */
+
+    /* Responsive - NO horizontal sidebar (let sidebar.js handle mobile) */
     @media (max-width: 768px) {
-      .sidebar {
-        width: 100%;
-        height: auto;
-        position: relative;
-        padding: 1.5rem;
-      }
-      .sidebar-nav {
-        flex-direction: row;
-        overflow-x: auto;
-      }
       .main-content {
         margin-left: 0;
         padding: 2rem 1rem;
