--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
         <a href="faq.html">FAQ</a>
         <a href="#" class="contact-trigger" onclick="showContactTooltip(event)">Contact</a>
         <a href="privacy.html">Privacy Policy</a>
-        <a href="tos.html">Terms of Service</a>
+        <a href="terms.html">Terms of Service</a>
       </div>
       <div class="footer-copyright">
         <p>&copy; 2025 BizTrack - Blockchain-Powered Product Authentication</p>
